fix overflow

--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ html,
 body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 button {
   border: none;
